--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="app">?</div>
 
-        <script src="/node_modules/axios/dist/axios.min.js"></script>
+        <!-- <script src="/node_modules/axios/dist/axios.min.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="/js/main.js"></script>
         <script src="js/main.js"></script>
