--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css" />
-    <!-- <link rel="stylesheet" href="/tic-tac-toe/css/style.css" /> -->
+    <!-- <link rel="stylesheet" href="/style.css" /> -->
+    <link rel="stylesheet" href="/tic-tac-toe/css/style.css" />
 </head>
 
 <body>
@@ -17,8 +17,8 @@
 
         <!-- <script src="/node_modules/axios/dist/axios.min.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="/main.js"></script>
-        <!-- <script src="/tic-tac-toe/js/main.js"></script> -->
+        <!-- <script src="/main.js"></script> -->
+        <script src="/tic-tac-toe/js/main.js"></script>
 </body>
 
 </html>
