--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/tic-tac-toe/css/style.css" />
 </head>
 
-<body>
+<body class="fade-in">
     <div id="app">?</div>
 
         <!-- <script src="/node_modules/axios/dist/axios.min.js"></script> -->
